NIFI-11958 Adjusted styling and property naming
- Simplified KustoIngestService interface method definitions
- Simplified KustoIngestQueryResponse removing boolean properties
- Moved KustoIngestDataFormat to Processors package instead of Services
- Adjusted property ordering and requirements in PutAzureDataExplorer